// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns correct shape 1`] = `
Object {
  "formErrors": Array [
    undefined,
  ],
  "handleOnSubmit": [Function],
  "handleZipChange": [Function],
  "isSetShippingLoading": false,
}
`;

exports[`returns errors and loading state from Apollo 1`] = `
Object {
  "formErrors": Array [
    "Apollo Error",
  ],
  "handleOnSubmit": [Function],
  "handleZipChange": [Function],
  "isSetShippingLoading": true,
}
`;
